# rez-numpy

./: CMakeLists.txt  README.md  install.sh  package.py
